--- a/src/assets/style/video_item.module.css
+++ b/src/assets/style/video_item.module.css
@@ -14,10 +14,11 @@
   position: relative;
   overflow: hidden;
   transition: box-shadow 0.6s;
+  border-radius: 10px;
 }
 
 .thumbnail::after {
-  content: 'Start video';
+  content: '';
   position: absolute;
   left: 0;
   top: 0;
@@ -30,7 +31,6 @@
   font-size: xlFont;
   text-align: center;
   color: orginWhite;
-  transform: translateY(100%);
   opacity: 0;
   transition: all 0.4s;
 }
