--- a/src/assets/style/layout.module.css
+++ b/src/assets/style/layout.module.css
@@ -14,10 +14,13 @@
   margin-left: 230px; 
 }
 
+
+
 @media mediaMicro {
   .container {
     max-width: 100%; 
     margin: 0 auto; 
+    margin-left: 0; 
   }
 
   .gnb {
@@ -29,6 +32,7 @@
   .container {
     max-width: 76em;
     margin: 0 auto; 
+    margin-left: 0; 
   }
   .gnb {
     display: none;
@@ -39,6 +43,7 @@
   .container {
     max-width: 106em;
     margin: 0 auto; 
+    margin-left: 0; 
   }
   .gnb {
     display: none;
@@ -49,6 +54,7 @@
   .container {
     flex-direction: column;
     margin: 0 auto; 
+    margin-left: 0; 
   }
   .gnb {
     display: none;
@@ -58,7 +64,6 @@
 @media mediaLarge {
   .container {
     max-width: 160em;
-    
   }
 
   .gnb {
@@ -143,6 +148,10 @@
   }
 }
 
+.isOpen {
+  margin-left: 240px;
+}
+
 .isActive {
   background-color: darkWhite;
 }
@@ -150,6 +159,3 @@
   background-color: orgingBlack;
 }
 
-.isOpen {
-  margin-left: 240px;
-}
