--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,7 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-thumb {
   background-color: #cccc;
+  border-radius: 16px;
 }
 
 body::-webkit-scrollbar-track {
@@ -17,7 +18,7 @@ body::-webkit-scrollbar-track {
 }
 
 /* darkmode */
-body.dark {
+body.dark{
   background-color: #181818;
 }
 
