--- a/src/assets/style/layout.module.css
+++ b/src/assets/style/layout.module.css
@@ -10,8 +10,9 @@
 
 .container {
   display: flex;
+  width: 100%;
   height: 100%;
-  margin-left: 230px; 
+  margin-left: 230px;
 }
 
 
@@ -20,7 +21,6 @@
   .container {
     max-width: 100%; 
     margin: 0 auto; 
-    margin-left: 0; 
   }
 
   .gnb {
@@ -32,7 +32,6 @@
   .container {
     max-width: 76em;
     margin: 0 auto; 
-    margin-left: 0; 
   }
   .gnb {
     display: none;
@@ -43,7 +42,6 @@
   .container {
     max-width: 106em;
     margin: 0 auto; 
-    margin-left: 0; 
   }
   .gnb {
     display: none;
@@ -54,7 +52,6 @@
   .container {
     flex-direction: column;
     margin: 0 auto; 
-    margin-left: 0; 
   }
   .gnb {
     display: none;
@@ -148,8 +145,13 @@
   }
 }
 
+.isClose {
+  max-width: 100%;
+  margin: 0 auto;
+}
+
 .isOpen {
-  margin-left: 240px;
+  margin-left: 230px;
 }
 
 .isActive {
@@ -159,3 +161,19 @@
   background-color: orgingBlack;
 }
 
+.gnb nav::-webkit-scrollbar {
+  width: 1em;
+}
+
+.gnb nav::-webkit-scrollbar-thumb {
+  background-color: #cccc;
+  border-radius: 16px;
+}
+
+.gnb nav::-webkit-scrollbar-track {
+  background-color: #f6f6f6;
+}
+
+.gnb.dark nav::-webkit-scrollbar-track {
+  background-color: #181818;
+}
